--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "country-state-city",
-  "version": "1.0.2",
-  "description": "Library for fetching Country, its States and Cities",
+  "name": "country-state-city-2020",
+  "version": "1.0.3",
+  "description": "Library for fetching Country, its States and Cities - updated for United state.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "tsc -p tsconfig.json"
   },
-  "author": "harpreetkhalsagtbit@gmail.com",
+  "author": "suraj.rocking379@gmail.com",
   "license": "GPL-3.0",
   "directories": {
     "lib": "lib"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/harpreetkhalsagtbit/country-state-city.git"
+    "url": "git+https://github.com/surajsnanavare/country-state-city.git"
   },
   "husky": {
     "hooks": {
@@ -29,12 +29,13 @@
     "City",
     "GeoLocation",
     "Search",
-    "Filter"
+    "Filter",
+    "Usa"
   ],
   "bugs": {
-    "url": "https://github.com/harpreetkhalsagtbit/country-state-city/issues"
+    "url": "https://github.com/surajsnanavare/country-state-city/issues"
   },
-  "homepage": "https://github.com/harpreetkhalsagtbit/country-state-city#readme",
+  "homepage": "https://github.com/surajsnanavare/country-state-city#readme",
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "husky": "^1.3.1",
