--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "country-state-city-2020",
+  "name": "country-state-city-usa",
   "version": "1.0.4",
   "description": "Library for fetching Country, its States and Cities - updated for United state.",
   "main": "dist/index.js",
