--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/surajsnanavare/country-state-city-usa.git"
+    "url": "git+https://github.com/surajsnanavare/country-state-city"
   },
   "husky": {
     "hooks": {
@@ -33,9 +33,9 @@
     "Usa"
   ],
   "bugs": {
-    "url": "https://github.com/surajsnanavare/country-state-city-usa/issues"
+    "url": "https://github.com/surajsnanavare/country-state-city/issues"
   },
-  "homepage": "https://github.com/surajsnanavare/country-state-city-usa#readme",
+  "homepage": "https://github.com/surajsnanavare/country-state-city#readme",
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "husky": "^1.3.1",
